create: logout #4
